# setup_

./: .dockerignore  .gitconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  setup-refactored.sh
.cursorrules/: docker.mdc  markdown.mdc
.devcontainer/: Dockerfile  Dockerfile.ml-enhanced  Dockerfile.production  README.md  devcontainer.json  java-setup.sh  post-create.sh  test-container.sh
.devcontainer/config/: pyproject.toml
.devcontainer/examples/: java-project.json  node-project.json
.devcontainer/guides/: FAQ.md  GETTING_STARTED.md
.devcontainer/templates/ml-project/: pyproject.toml  start_ml.py
archive/: setup_wsl.sh
config/: versions.conf
docs/: ADVANCED.md  CI_CD_GUIDE.md  CONTAINERIZATION_BEST_PRACTICES.md  CONTAINER_DEVELOPMENT.md  DOCKER_GUIDE.md  MODERN_DEV_SETUP.md  README.md  REFACTORING_MASTER_GUIDE.md  VERSION_MANAGEMENT.md  ml-container-improvements.md
modules/databases/: duckdb.sh  mariadb.sh
modules/languages/: java.sh  python.sh  rust.sh
scripts/: build-containers.sh  build-ml-container.sh
templates/ml-project/: pyproject.toml
