[project]
name = "data-processing-project"
version = "0.1.0"
description = "Data Processing & API Project"
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20.0",
    "duckdb>=0.9.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
workflow = [
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-postgres>=5.0.0",
    "apache-airflow-providers-docker>=3.0.0",
]
monitoring = [
    "prometheus-client>=0.19.0",
    "grafana-api>=1.0.3",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
]
data = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",  # Still useful for some integrations
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]
database = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "asyncpg>=0.29.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "SIM", "PL"]
ignore = ["S101", "PLR0913", "PLR2004"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Allow asserts in tests

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",  # For testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 