[project]
name = "ml-ai-project"
version = "0.1.0"
description = "ML/AI Data Processing Project"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "duckdb>=0.9.2",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "easyocr>=1.7.0",
]
rag = [
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "PT", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupyter>=1.0.0",
    "mlflow>=2.8.0",
] 